@@ -6,14 +6,14 @@
 	<parent>
 		<groupId>com.dubture.indexing</groupId>
 		<artifactId>parent</artifactId>
-		<version>0.0.17-SNAPSHOT</version>
+		<version>0.0.18-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
 	<artifactId>com.dubture.indexing.test</artifactId>
 	<packaging>eclipse-test-plugin</packaging>
 	<properties>
-		<test.vmargs>-Xmx512m -XX:MaxPermSize=256m</test.vmargs>
+		<test.vmargs>-Xmx512m</test.vmargs>
 	</properties>
 	<build>
 		<plugins>
